Fix a preview bug by add word-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,8 @@ button:hover {
 	width: 600px;
 	margin-right: 50px;
 	float: right;
+	overflow: hidden;
+	word-wrap: break-word;
 }
 
 footer {
